# netCDF-server

./: CMakeLists.txt  Dockerfile  README.md
include/: netcdf_server.h
include/matplot/detail/: exports.h
include/netcdf/: netcdf_meta.h
lib/: libmatplot.1.dylib  libmatplot.dylib  libnetcdf-cxx.settings  libnetcdf-cxx4.1.1.0.dylib  libnetcdf-cxx4.1.dylib
src/: main  main.cpp  netcdf_server.cpp
